INTYG-4543: srs-feature i frontend aktiveras endast om användaren har srs-feature påslaget

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
@@ -1,5 +1,5 @@
-<div>
-  <div ng-show="srsAvailable">
+<div ng-if="userHasSrsFeature && srsAvailable">
+  <div>
     <div id="srs">
       <button id="{{relatedFormId}}-srs-button" type="button" class="btn btn-default btn-srs" ng-click="status.open = !status.open; logSrsButtonClicked(); closeFmb();">
         SRS 
