--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -1,12 +1,12 @@
-<div ng-if="prediktionInfo && riskSignal">
+<div ng-if="prediktionInfo && prediction.description">
         <wc-srs-info-box message-string="prediktionInfo"></wc-srs-info-box>
     </div>
-    <div ng-if="prediktionError && riskSignal">
+    <div ng-if="prediktionError && prediction.description">
         <wc-srs-error-box message-string="prediktionError"></wc-srs-error-box>
     </div>
-    <div id="predictionBox" ng-if="riskSignal && riskSignal !== 'error'" class="alert alert-danger">
+    <div id="predictionBox" ng-if="predictioe !== 'error' && prediction.description" class="alert alert-danger">
                 <img ng-src="{{riskImage}}" alt="">
-        {{riskSignal}} 
+        {{prediction.description}}
         <div 
         style="float:right"
         class="glyphicon glyphicon-question-sign"
