INTYG-4648: ändrat utseende på prediktionsskylten så den inte längre ser ut som ett felmeddealnde

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -4,9 +4,9 @@
     <div ng-if="prediktionError && prediction.description">
         <wc-srs-error-box message-string="prediktionError"></wc-srs-error-box>
     </div>
-    <div id="predictionBox" ng-if="predictioe !== 'error' && prediction.description" class="alert alert-danger">
+    <div id="predictionBox" ng-if="predictioe !== 'error' && prediction.description" class="prediction-box alert alert-danger">
                 <img ng-src="{{riskImage}}" alt="">
-        {{prediction.description}}
+        {{prediction.level + ' ' + prediction.description}}
         <div 
         style="float:right"
         class="glyphicon glyphicon-question-sign"
