--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -1,7 +1,7 @@
-<div ng-if="prediktionInfo && prediction.description">
+<div ng-if="prediktionInfo && prediction.statusCode">
         <wc-srs-info-box message-string="prediktionInfo"></wc-srs-info-box>
     </div>
-    <div ng-if="prediktionError && prediction.description">
+    <div ng-if="prediktionError && prediction.statusCode">
         <wc-srs-error-box message-string="prediktionError"></wc-srs-error-box>
     </div>
     <div id="predictionBox" ng-if="predictioe !== 'error' && prediction.description" class="prediction-box alert alert-danger">
