INTYG-4209: Tvingande consent dialog vid uppstart av WC om vårdpersonen är sekretessmarkerad, samt en infodialog i wc-header.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
@@ -23,6 +23,7 @@
       </span>
     </div>
     <div class="headerbox-user pull-right">
+      <wc-vard-person-sekretess></wc-vard-person-sekretess>
       <div class="headerbox-user-profile headerbox-avatar">
         <div ng-show="user.namn.length">
           <span id="logged-in-role">
