--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -39,7 +39,7 @@
                     <br>
                 </div>
                 <div class="floatRight">
-                    <button class="btn btn-info ng-binding button-rounded" ng-click="redirectToAtgardExternalSite(diagnosKod); logAtgarderRekClicked;">Läs mer</button>
+                    <button class="btn btn-info ng-binding" ng-click="redirectToAtgardExternalSite(diagnosKod); logAtgarderRekClicked;">Läs mer</button>
                 </div>
             </div>
     
@@ -54,7 +54,7 @@
             </div>
             <img ng-src="{{atgarder.statistikBild}}" alt=""/>
             <div class="floatRight">
-                <button class="btn btn-info ng-binding button-rounded" ng-click="redirectToStatistikExternalSite(diagnosKod); logStatistikClicked();">Läs mer</button>
+                <button class="btn btn-info ng-binding" ng-click="redirectToStatistikExternalSite(diagnosKod); logStatistikClicked();">Läs mer</button>
             </div>
         </div>
 
