--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html
@@ -8,9 +8,9 @@
 
         <!-- Kompletteringar heading for utkast view -->
         <h2 class="col-head">
-          Kompletteringar <span wc-help-mark field-help-text="common.arende.help.kompletteringar"></span>
+          Kompletteringar <span wc-help-chevron help-text-key="common.arende.help.kompletteringar"></span>
         </h2>
-
+        <span wc-help-chevron-text help-text-key="common.arende.help.kompletteringar"></span>
         <!-- error message -->
         <div id="arende-list-load-error" ng-show="viewState.doneLoading && viewState.activeErrorMessageKey"
              class="alert alert-danger">
