INTYG-4274: Justerade cookie-texten enl krav

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/cookiebanner/wcCookieBanner.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/cookiebanner/wcCookieBanner.directive.html
@@ -3,7 +3,7 @@
     <div class="alert alert-info">
       <div class="row">
         <div class="col-sm-10">
-          Vi använder kakor (cookies) för att den här webbplatsen ska fungera på ett bra sätt för dig. Genom att använda Webcert accepterar du vår användning av kakor.<br>
+          Vi använder kakor (cookies) för att den här webbplatsen ska fungera på ett bra sätt för dig. Genom att logga in accepterar du vår användning av kakor.<br>
 
           <div ng-if="showDetails">
             <p><br>Den typ av kakor som används på den här webbplatsen kallas för sessionskakor. De lagras temporärt i
