INTYG-4183: småfixar för statistikbild

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -3,11 +3,9 @@
     <div class="srs-panel-title">
       <h4><span id="srs_diagnos_heading_{{relatedFormId}}">{{srs.diagnosKod}} - {{srs.diagnosBeskrivning}}</span>
       </h4>
-      <button id="closeButton" type="button" class="align-srs-close-button-right btn btn-default" ng-click="closeSrs()">
-        <i>
-          <img src="/web/webjars/common/webcert/srs/img/u135.png" alt="closeButton">
-        </i>
-      </button>
+      <button style="background-color: Transparent; background-repeat:no-repeat; border: none; cursor:pointer; overflow: hidden; outline:none;" type="button" class="align-srs-close-button-right btn btn-default" ng-click="status.open = false"><i>
+        <img src="/web/webjars/common/webcert/srs/img/u135.png" alt="closeButton">
+      </i></button>
     </div>
     
   </div>
