INTYG-4383: Uppdaterar ModuleApi för att tillåta skapa utkast from annan intygstyp

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -133,6 +133,16 @@
           </button>
 
           <button type="button"
+                  intygstyp="{{intygstyp}}"
+                  id="createFromTemplateBtn"
+                  class="btn btn-info"
+                  ng-if="showCreateFromTemplate()"
+                  ng-click="createFromTemplate(viewState.intygModel)"
+                  wc-check-vardenhet>
+              Skapa {{createFromTemplateConfig[intygstyp].name}}
+          </button>
+
+          <button type="button"
                   wc-authority="MAKULERA_INTYG"
                   request-origin="!UTHOPP"
                   intygstyp="{{intygstyp}}"
