--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -40,16 +40,19 @@
       <div ng-show="consentGiven">
           <br>
           <hr>
+
           <h3 class="floatLeft">Beräkning av risk för lång sjukskrivning</h3>
-          <div class="floatRight">{{isCollapsed ? "Visa mindre" : "Visa mer"}}
+          <div class="line">
             <a id="questionsCollapser" data-toggle="collapse" ng-click="isCollapsed=!isCollapsed" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                  <i class="glyphicon glyphicon-menu-down" ng-class="{'glyphicon-menu-up': isCollapsed, 'glyphicon-menu-down': !isCollapsed}"></i>
+                  <i class="glyphicon glyphicon-menu-down" ng-class="{'glyphicon-menu-down': isCollapsed, 'glyphicon-menu-up': !isCollapsed}"></i>
               </a>
           </div>
           <br>
           <br>
-          <wc-srs-questionaire id="collapseExample" class="panel-collapse collapse in"></wc-srs-questionaire>
-          <wc-srs-result></wc-srs-result>
+          <div id="collapseExample" class="panel-collapse collapse">
+            <wc-srs-questionaire></wc-srs-questionaire>
+          </div>
+            <wc-srs-result></wc-srs-result>
       </div>
 
     </div>
