INTYG-4428: Korrigering av länkar för 3-nivåkoder

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -37,10 +37,10 @@
                     <br>
                 </div>
                 <div class="floatRight">
-                    <button class="btn btn-info ng-binding" ng-click="redirectToAtgardExternalSite(diagnosKod); logAtgarderRekClicked;">Läs mer</button>
+                    <button class="btn btn-info ng-binding" ng-click="redirectToAtgardExternalSite(); logAtgarderRekClicked;">Läs mer</button>
                 </div>
             </div>
-    
+
         </div>
         <div id="statstics" class="tab-pane fade">
             <br>
@@ -52,7 +52,7 @@
             </div>
             <img ng-show="statistik.statistikBild" ng-src="{{statistik.statistikBild}}" alt=""/>
             <div class="floatRight">
-                <button class="btn btn-info ng-binding" ng-click="redirectToStatistikExternalSite(diagnosKod); logStatistikClicked();">Läs mer</button>
+                <button class="btn btn-info ng-binding" ng-click="redirectToStatistikExternalSite(); logStatistikClicked();">Läs mer</button>
             </div>
         </div>
 
