INTYG-4670: lite fix

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
@@ -7,7 +7,7 @@
       </button>
       <div id="panel-wrapper-srs"
            ng-show="status.open"
-           ng-class="{'srs-collapse': !status.open, 'fixed-panel': !srsButtonVisible}">
+           ng-class="{'srs-collapse': !status.open, 'srs-fixed-panel': !srsButtonVisible}">
         <div class="panel-arrow"></div>
         <div class="panel panel-srs-info">
           <wc-srs-content></wc-srs-content>
