--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -4,7 +4,7 @@
     <div ng-if="prediktionError && prediction.statusCode">
         <wc-srs-error-box message-string="prediktionError"></wc-srs-error-box>
     </div>
-    <div id="predictionBox" ng-if="predictioe !== 'error' && prediction.description" class="prediction-box alert alert-danger">
+    <div id="predictionBox" ng-if="prediction !== 'error' && prediction.description" class="prediction-box alert alert-danger">
                 <img ng-src="{{riskImage}}" alt="">
         {{prediction.level + ' ' + prediction.description}}
         <div 
