INTYG-4383: Nya uppdaterade texter enligt krav. Take 2.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -139,7 +139,7 @@
                   ng-if="showCreateFromTemplate()"
                   ng-click="createFromTemplate(viewState.intygModel)"
                   wc-check-vardenhet>
-              Skriva {{createFromTemplateConfig[intygstyp].name}}
+              Skriv {{createFromTemplateConfig[intygstyp].name}}
           </button>
 
           <button type="button"
