--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -11,7 +11,7 @@
         style="float:right"
         class="glyphicon glyphicon-question-sign"
         uib-popover-template="externalRisk.templateUrl" popover-trigger="click"
-        popover-placement="auto right" popover-append-to-body="true" popover-is-open="riskInfoOpen">
+        popover-placement="auto right" popover-append-to-body="true" popover-is-open="status.riskInfoOpen">
       </div>
     </div>
     <ul class="nav nav-tabs nav-justified">
