INTYG-4759: Tagit bort stjärna för obligatorisk fråga.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakMulti.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/dodsorsakMulti.formly.html
@@ -1,7 +1,7 @@
 <div>
   <table class="dodsorsak-multi" style="width: 100%">
     <tr>
-      <th style="width: 60%;"><span dynamic-label key="{{to.beskrivningLabel}}.RBK"></span> <span class="required">*</span> <span wc-help-chevron help-text-key="{{to.beskrivningLabel}}.HLP"></span>
+      <th style="width: 60%;"><span dynamic-label key="{{to.beskrivningLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{to.beskrivningLabel}}.HLP"></span>
         <span wc-help-chevron-text help-text-key="{{to.beskrivningLabel}}.HLP"></span>
       </th>
       <th><span dynamic-label key="{{to.datumLabel}}.RBK"></span> <span wc-help-chevron help-text-key="{{to.datumLabel}}.HLP"></span>
