INTYG-3720: Checkboxarna ej längre klickbara utanför checkboxrutan och textarean.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkboxInline.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkboxInline.formly.html
@@ -1,5 +1,5 @@
 <div>
-  <label class="big-checkbox-label checkbox" ng-class="{'bold': to.bold}">
+  <label class="big-checkbox-label checkbox-inline" ng-class="{'bold': to.bold}">
     <input type="checkbox" class="big-checkbox" ng-model="model[options.key]">
     <span dynamic-label key="{{to.label}}.RBK"></span>
   </label>
