--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroup.formly.html
@@ -1,7 +1,7 @@
 <div class="form-horizontal">
   <wc-form-label to="to" key="options.key"></wc-form-label>
   <div data-ng-repeat="choice in to.choices">
-    <label class="big-checkbox-label checkbox">
+    <label class="big-checkbox-label checkbox-inline">
       <input id="{{options.key}}-{{choice}}" type="checkbox" class="big-checkbox" ng-model="model[options.key][choice]">
       <span dynamic-label key="{{to.code}}.{{choice}}.RBK"></span>
     </label>
